Don't add JVM argument on pre-Java9 runtimes